src/global/common.css
.op-7 {
  opacity: 0.7;
}

.section-title {
  font-weight: 500;
}

.wrapper {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
}

.wrapper .section-title {
  transform: translateX(10px);
}

.tool-tip {
  font-size: 0.875rem;
  background-color: var(--light-clr);
  color: var(--dark-clr);
  font-weight: 500;
  padding: 0.125rem 0.25rem;
  border-radius: 0.125rem;
  position: absolute;
  top: 120%;
  left: 50%;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.3s ease-out 0s;
}

/* Animation starting state at hidden and visible on show */
.hidden {
  opacity: 0;
  transform: translate(0, 2.5rem);
  transition: all 0.7s ease-in-out;
}

.show {
  opacity: 1;
  transform: translate(0, 0);
}

